Add corporate design page.

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -16,7 +16,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  background-image: url("../logo-white.svg");
+  background-image: url("../anno-logo-white.svg");
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
