Add ANNO modules image as SVG, PDF and GraphMF file and improve design table CSS.

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -47,3 +47,12 @@
   align-items: center;
   justify-content: center;
 }
+
+table.design tbody tr td:has(> img) {
+  align: center;
+  margin: 1em;
+}
+
+table.design tbody tr td img {
+  width: 14em;
+}
